--- a/index.html
+++ b/index.html
@@ -1,10 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
   <title>SJSJ</title>
+  <link href='//fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+  <link href='//fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
+  <link href="css/bootstrap.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <link rel="stylesheet" href="css/horsey.min.css">
 </head>
 <body>
-  <h1>SJSJ</h1>  
+
+<div class="content">
+
+  <div class="container">
+
+    <div class="col-md-8 col-md-offset-2">
+
+        <div class="login-head" style="background-image: url('images/logo.png');">
+          Simplified JavaScript Jargon
+          <div class="clearfix"></div>
+        </div>
+    
+        <div class="search">
+          <form>
+            <input type="submit" value=" ">
+            <input type="search" id="search" value="Search" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Search';}" required="">
+          </form>
+        </div>
+
+        <div class="results" id="results">
+          <a href="https://github.com/HugoGiraudel/SJSJ">Simplified JavaScript Jargon</a> (short SJSJ) is a community-driven attempt at explaining the loads of buzzwords making the current JavaScript ecosystem in a few simple words. The idea is not to replace individual documentations, but to act as some kind of glossary that can be easily referenced.
+        </div>
+
+    </div>
+
+  </div>
+</div>
+
+<script src="js/horsey.min.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
