Fixing internal markdown links

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div class="col-md-8 col-md-offset-2">
 
-        <a href="/">
+        <a href="/SJSJ">
         <div class="login-head" style="background-image: url('images/logo.png');">
           Simplified JavaScript Jargon
           <div class="clearfix"></div>
