--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
   <link rel="stylesheet" href="css/horsey.min.css">
 </head>
 <body>
-
 <div class="content">
+
+  <div id="particles-js"></div>
 
   <div class="container">
 
@@ -76,6 +77,7 @@
   </div>
 </div>
 
+<script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 <script src="js/horsey.min.js"></script>
 <script src="js/app.js"></script>
 </body>
