--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="col-md-8 col-md-offset-2">
 
         <a href="/SJSJ/">
-        <div class="login-head" style="background-image: url('images/logo.png');">
+        <div class="login-head animatable" style="background-image: url('images/logo.png');">
           Simplified JavaScript Jargon
           <div class="clearfix"></div>
         </div>
