--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
 ---
 ---
 
+{% for letter in site.alphabet %}
+<section aria-label="Entries starting with “{{ letter.letter }}”">
+<span class="as-h1">{{ letter.letter | upcase }}</span>
+
 <ul class="index-list">
 {% for entry in site.glossary %}
-  <li><a href="{{ entry.url | prepend: site.baseurl }}">{{ entry.title }}</a></li>
+  {% assign first_char = entry.title|split:''|first|downcase %}
+  {% if first_char == letter.letter %}
+  <li><a href="{{ entry.url | prepend: site.baseurl }}">{{ entry.title }}</a>: {{ entry.excerpt }}</li>
+  {% endif %}
 {% endfor %}
 </ul>
+</section>
+{% endfor %}
