Added related/ page

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 ---
 ---
 
+<p class="intro">If you enjoy Simplified JavaScript Jargon, be sure to check the related <a href="/related/">projects</a>!</p>
+
 {% for letter in site.alphabet %}
 <section aria-label="Entries starting with “{{ letter.letter }}”">
 <span class="as-h1">{{ letter.letter | upcase }}</span>
